# text.rs

./: BENCHMARK.md  Cargo.toml  README.md
benches/: .sort.rs.rustfmt  sort.rs
src/: lib.rs
src/intersect/: mod.rs
src/manipulation/: mod.rs
src/occurrence/: mod.rs
src/repetitions/: mod.rs
src/sort/: mod.rs
src/unique/: mod.rs
tests/: intersect.rs  occurrence.rs  repetitions.rs  sort.rs  text_manipulation.rs  text_unique.rs
